# umu-mkpatch

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.in
.github/workflows/: build.yml
python/umu_mkpatch/: __main__.py  _builder.py  _types.py  _util.py
src/: lib.rs
