[package]
name = "umu-mkpatch"
edition = "2021"
version = "0.1.7"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "umu_mkpatch"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }
ssh-key = { version = "0.6.7", features = ["ed25519"] }
